# occt-kernel-wasm

./: .clang-format  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SKETCH_SOLVER_ARCHITECTURE.md  THIRD_PARTY_LICENSES.md  package-lock.json  package.json  tsconfig.check.json  tsconfig.declarations.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
bindings/: bindings.cpp  sketch_bindings.cpp
build-sketch-toolkit-release/: Makefile
build-wasm-fast/: .ninja_deps  .ninja_log  build.ninja
build-wasm-fast-configcheck/: build.ninja
build-wasm-fast-linkcheck/: build.ninja
cpp/: json_utils.h  kernel.cpp  kernel.h  profile_builder.cpp  profile_builder.h  sketch_toolkit.cpp  sketch_toolkit.h  wire_builder.cpp  wire_builder.h
examples/browser/: index.html
examples/nodejs/: demo.js
scripts/: build-dist.mjs  build-native.sh  build-occt-wasm.ps1  build-occt.sh  build-sketch-toolkit.ps1  build-sketch-toolkit.sh  build-wasm.ps1  build-wasm.sh  run-platform-build.mjs
src/: api.ts  default-module.ts  errors.ts  index.browser.ts  index.node.ts  index.ts  kernel.ts  mock-adapter.ts  sketch-api.ts  sketch-kernel.ts  sketch-smart-dimensions.ts  sketch-toolkit.browser.ts  sketch-toolkit.node.ts  sketch-toolkit.ts  sketch-types.ts  types.ts  version.ts
tests/geometry/: modelling.test.ts
tests/integration/: analysis-wasm.test.ts  normals-wasm.test.ts  revolve-wasm.test.ts  sketch-toolkit-wasm.test.ts  sweep-loft-wasm.test.ts
tests/smoke/: nodejs.test.ts
tests/unit/: errors.test.ts  kernel.test.ts  sketch-smart-dimensions.test.ts
